cmake_minimum_required(VERSION 3.22)
project(3lab)

set(CMAKE_CXX_STANDARD 17)

add_executable (
        3lab
        main.cpp
        list.cpp
        list.h
        array.cpp
        array.h
        Node.h
        Node2.h
        linkedList2.cpp
        linkedList2.h
        Object.h
        nodeFor2linkedList.h
        listOnCursors.cpp
        listOnCursors.h
        NodeForCursors.h
        3laba/MapATD.cpp
        3laba/MapATD.h
        3laba/MapList.cpp
        3laba/MapList.h
        3laba/StackList.cpp
        3laba/StackList.h
        3laba/StackATD.cpp
        3laba/StackATD.h
        3laba/QueueArray.cpp
        3laba/QueueArray.h
        3laba/QueueList.cpp
        3laba/QueueList.h
        3laba/QueueATD.cpp
        3laba/QueueATD.h
        forMAP/list1.cpp
        forMAP/list1.h
        forMAP/arraY1.cpp
        forMAP/arraY1.h
        forMAP/LinkedList.cpp
        forMAP/LinkedList.h
        forMAP/object.h
        forMAP/listOnCursors1.cpp
        forMAP/listOnCursors1.h forMAP/nodeArr.h forMAP/nodeList.h forMAP/nodeList2.h forMAP/nodeCursors.h)